Ensured the search container is at least a sensible height so the bg image doesn't get cropped

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -106,6 +106,7 @@ paper-button {
 
 .ubcidm-search-container {
     background: transparent url('../images/shoeprints-r-to-l.png') no-repeat 100% 20%;
+    min-height: 200px;
 }
 
 .ubcidm-form-submit {
